# sarai-agi

./: .env.example  .gitignore  .mypy_files  404.html  CHANGELOG.md  CONTRIBUTING.md  DAY7_COMPLETION_SUMMARY.md  GITHUB_SETUP.md  HANDOFF_v3.6_CONSCIOUS_ALIGNED.md  HILOS_ABIERTOS.md  INTEGRATION_COMPLETE_v3.6.0.md  INTEGRATION_PROGRESS_v3.8.0.md  INTERACTIVE_CHAT.md  LICENSE  LLM_GATEWAY_SUMMARY.md  MIGRATION_COMPLETE_v3.5.1.md  MIGRATION_PLAN_v3.5.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY_QUICK.txt  NEXT_SESSION_PLAN.md  PIPER_TTS_MIGRATION.md  PROGRESO_v3.8.0_INTEGRACION_4.md  PROPUESTA_MODULARIZACION_SARAI.md  PUSH_TO_GITHUB.md  PYTHON_311_MIGRATION.md  PYTHON_312_MIGRATION_COMPLETE.md  PYTHON_313_MIGRATION.md  README.md  RELEASE_NOTES_v3.6.md  RELEASE_NOTES_v3.7.md  RESUMEN_EJECUTIVO_RAG_v3.5.md  ROADMAP_v3.8.0.md  SESSION_SUMMARY_04NOV2025.md  SESSION_SUMMARY_05NOV2025.md  SESSION_SUMMARY_05NOV2025_backup.md  SESSION_SUMMARY_DAY6_TRM.md  SESSION_SUMMARY_EMOTIONAL_CONTEXT.md  SIGUIENTE_SESION.md  STRICT_MODE_SUMMARY.md  VERSION  (+15 more)
.github/: FUNDING.yml  README.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
ARCHITECTURE_OVERVIEW/: index.html
HLCS_PROPOSAL/: index.html
HLCS_V02_CONSCIOUSNESS/: index.html
HLCS_V03_EVOLVING_IDENTITY/: index.html
HLCS_V04_MULTI_STAKEHOLDER_SCI/: index.html
INTEGRATION_ARCHITECTURE/: index.html
MIGRATION_PLAN_v3_5_1/: index.html
NEXT_STEPS/: index.html
ROADMAP/: index.html
ROADMAP_v4.0_SIDECARS_EVALUATION/: index.html
WEEK1_TASKS/: index.html
benchmarks/: benchmark_e2e_latency.py  benchmark_trm.py  benchmark_trm_expanded.py  benchmark_tts_gaps.py  validate_lora_integration.py
config/: advanced_system.json  default_settings.yaml  models.yaml  sarai.yaml  stakeholder_config.json  strategies.json  v3.7.0_multimodal_config.yaml
config/searxng/: settings.yml
data/: .gitkeep
demos/: demo_trm_v37.py
docs/: ARCHITECTURE_OVERVIEW.md  ARQUITECTURA_6_HILOS_FULLDUPLEX.md  AUDIO_PIPELINE_ARCHITECTURE.md  DAY7_MELOTTS_FIX.md  HLCS_PROPOSAL.md  HLCS_V02_CONSCIOUSNESS.md  HLCS_V03_EVOLVING_IDENTITY.md  HLCS_V04_MULTI_STAKEHOLDER_SCI.md  INTEGRATION_ARCHITECTURE.md  LANGGRAPH_VS_CREWAI.md  LLM_GATEWAY.md  MCP_SERVER.md  MELOTTS_EXPRESSIVENESS_GUIDE.md  MIGRATION_GUIDE_v3.7.0.md  MIGRATION_PLAN_v3_5_1.md  MULTIMODAL_LEARNING_COMPLETE.md  NEXT_STEPS.md  ROADMAP.md  ROADMAP_v4.0_SIDECARS_EVALUATION.md  STRICT_MODE_PHILOSOPHY.md  TRM_LORA_FAST_RESPONSE.md  TRM_METRICS_FINAL_v3.4.md  TTS_STREAMING_DESIGN.md  WEEK1_COMPLETE.md  WEEK1_DAY1-2_RESUMEN.md  WEEK1_DAY3-4_RESUMEN.md  WEEK1_DAY5_RESUMEN.md  WEEK1_TASKS.md  index.md
docs/examples/: llm_gateway_examples.py
examples/: audio_preprocessing_example.py  filler_system_demo.py  melotts_expressiveness_demo.py  quick_expressiveness_test.py
hlcs/: README.md
hlcs/api/: __init__.py  consciousness_stream.py  sci_endpoints.py
hlcs/core/: __init__.py  ethical_boundary_monitor.py  evolving_identity.py  ignorance_consciousness.py  integrated_consciousness.py  meta_consciousness_v02.py  sci.py  sci_multi_stakeholder.py  wisdom_driven_silence.py
hlcs/memory/: __init__.py  episode.py  narrative_memory.py
logs/: .gitkeep
models/: .gitkeep  lora_router_adapter.json
scripts/: bootstrap_env.sh  generate_fillers.py  init_github_repo.sh  start_mcp_server.py  test_hlcs_sarai_saul_DEMO.py  test_hlcs_sarai_saul_integration.py  validate_week1.py
search/: search_index.json
src/: __init__.py
src/sarai_agi/: __init__.py  configuration.py
src/sarai_agi/agents/: rag.py
src/sarai_agi/audio/: __init__.py  active_listening_monitor.py  audio_utils.py  fillers.py  melotts.py  pipertts.py  sherpa_vad.py  vosk_stt.py
src/sarai_agi/cascade/: __init__.py  confidence_router.py  think_mode_classifier.py
src/sarai_agi/classifier/: __init__.py  trm.py
src/sarai_agi/core/: __init__.py  integrator.py
src/sarai_agi/emotion/: __init__.py  context_engine.py
src/sarai_agi/feedback/: __init__.py  mirror_feedback.py
src/sarai_agi/input/: __init__.py  eager_input_processor.py
src/sarai_agi/integrations/: __init__.py  saul_integration.py
src/sarai_agi/learning/: __init__.py  lora_dataset.py  lora_trainer.py  social_learning_engine.py  youtube_learning_system.py
src/sarai_agi/llm_gateway/: README.md  __init__.py  cache.py  config.py  core.py  gateway.py
src/sarai_agi/mcp/: __init__.py  core.py  protocol_server.py  skills.py
src/sarai_agi/memory/: __init__.py  vector_db.py  web_audit.py  web_cache.py
src/sarai_agi/model/: __init__.py  pool.py  (+3 more)
state/: .gitkeep
state/web_cache/: cache.db
tests/: __init__.py  test_advanced_telemetry.py  test_cascade.py  test_core_functionality.py  test_emotional_context.py  test_emotional_integration.py  test_fillers.py  test_hlcs_v02.py  test_hlcs_v03.py  test_integration_e2e.py  test_llm_gateway.py  test_llm_gateway_core.py  test_mcp.py  test_mcp_protocol_server.py  test_melotts.py  test_melotts_integration.py  test_model_pool.py  test_multi_source_search.py  test_multimodal_learning.py  test_placeholder.py  test_quantization.py  test_qwen3vl_integration.py  test_rag_system.py  test_searxng_integration.py  test_security_resilience.py  test_sherpa_vad.py  test_specialized_agents.py  test_trm_classifier.py  test_unified_model_wrapper.py  test_vector_db.py  test_vosk_stt.py  test_youtube_integration.py
(+31 files in other folders)
