[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarai-agi"
version = "3.5.1"
description = "SARAi AGI - Sistema Autónomo Recursivo de Agente Inteligente"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SARAi Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-requests",
    "types-PyYAML",
]
psutil = [
    "psutil>=6.0.0",
]
# Core functionality (essential for most features)
core_deps = [
    "requests>=2.31.0",           # RAG web search 
    "qdrant-client>=1.7.0",      # Primary vector DB (production)
]
# Optional development dependencies  
dev_optional = [
    "chromadb>=0.4.0",           # Alternative vector DB (development)
    "transformers>=4.40.0",      # HuggingFace models (optional backend)
    "torch>=2.0.0",              # PyTorch models (optional backend) 
]
# Cloud API wrappers (completely optional)
cloud_optional = [
    "openai>=1.0.0",             # OpenAI API wrapper (optional cloud backend)
]
# Performance dependencies (CPU-intensive)  
perf_optional = [
    "llama-cpp-python>=0.2.0",  # GGUF models (CPU inference)
]
# Full test suite (everything)
test_full = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24.0", 
    "pytest-cov>=5.0.0",
    "requests>=2.31.0",
    "qdrant-client>=1.7.0",
    "chromadb>=0.4.0",
    "transformers>=4.40.0",
    "openai>=1.0.0",
    "llama-cpp-python>=0.2.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/SARAi/SARAi_AGI"
Repository = "https://github.com/SARAi/SARAi_AGI"
Documentation = "https://github.com/SARAi/SARAi_AGI/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (requires external services)",
    "requires_llama: marks tests that require llama-cpp-python",
    "requires_qdrant: marks tests that require qdrant-client", 
    "requires_chromadb: marks tests that require chromadb",
    "requires_transformers: marks tests that require transformers",
    "requires_requests: marks tests that require requests",
    "requires_openai: marks tests that require openai",
    "core: marks tests for core functionality (always run)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
